[B]2.5.5[/B]
• Fix episodes thumbs with Personalized Widgets
• Minor fixes

[B]2.5.4[/B]
• Add posters on 'Fanart' view
• Add new 'Double lists' view for sets
• Fix end time resume flag icon with AM/PM
• Fix visibility for 'Double lists' and 'Triple lists' views
• Minor fixes

[B]2.5.3[/B]
• Add new 'Double lists' view for artists and albums
• Add new 'Triple lists' view for artists
• Improve esthetic appearance
• Minor fixes

[B]2.5.2[/B]
• Add miniatures panel for Personalized Widgets
• Add support for animated weather icons
• Fix missing watched icons and progress bars for Personalized Widgets
• Minor fixes

[B]2.5.1[/B]
• Fix aspect ratio for widgets
• Minor fixes
• Update German translation

[B]2.5.0[/B]
/!\ Reboot Kodi and 'Reset main menu and power menu settings' in skin settings after installation of this version /!\
• Add vertical panels for Personalized Widgets
• Add 'Categories' appearance for Personalized Widgets
• Add support for albums back thumbs (file must be placed in album folder and named 'thumbback.jpg')
• Add possibility to change rating text color
• Fix issue with Appearance for Personalized Widgets
• Minor fixes

[B]2.4.0[/B]
/!\ Reboot Kodi and 'Reset main menu and power menu settings' in skin settings after installation of this version /!\
• Add support for Skin Shortcuts template to avoid personalized widgets reloading
• Add possibility to define sort method and sort direction for personalized widgets
• Add rating on video osd info
• Minor changes
• Minor fixes

[B]2.3.2[/B]
• Add VP9 video codec icon
• Add rewind and forward OSD buttons for PVR TimeShift
• Fix on PVR/Radio widgets
• Fix duration flag icon with Global Search
• Many fixes for Arial font
• Minor changes
• Minor fixes

[B]2.3.1[/B]
• Add Next Up popup for Live TV
• Add albums count on artists dialog info
• Add possibility to disable 'Settings' shortcut widget
• Add PVR overlay when switching channels
• Fix artists/albums plots on music dialog info
• Fix on PVR